<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign up</string>
    <string name="login">Sign in</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to share your story? </string>
    <string name="name">Name</string>
    <string name="copyright">© 2023 Dicoding</string>
    <string name="logout">Logout</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac purus purus.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="story_upload">Story Upload</string>
    <string name="language">Language</string>
    <string name="login_success">You are logged in successfully</string>
    <string name="text_continue">Continue</string>
    <string name="error_email">Email must be valid (xxx@xxxx.com)</string>
    <string name="error_password">Password cannot be less than 8 characters</string>
    <string name="register_successs">The account is ready. Let\'s login and upload your story.</string>
    <string name="empty_field">Enter your %1$s</string>
    <string name="titlle_dialog_success">Yeah!</string>
    <string name="empty_image">Please insert the image file first.</string>
    <string name="dialog_logout">Sure you want to log out of your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="todo_story_image">Story Image</string>
    <string name="todo_upload_image">Images to be uploaded</string>
    <string name="todo_take_photo">Button to take a photo</string>
    <string name="todo_switch_camera">Button to switch front or rear camera</string>
    <string name="todo_illustration_login">Illustrative image on the login page</string>
    <string name="todo_illustration_register">Illustrative image on the registration page</string>
    <string name="user_not_found">User not found</string>
</resources>